--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
         <!-- Final Message Modal -->
         <div id="final-message-modal" class="modal">
             <div class="modal-content">
-                <div class="final-message-title">INGET YA!</div>
+                <div class="final-message-title">YAHAHAHHAHA KALAH</div>
                 <div class="final-message-text">
-                    <p>walaupun kamu kalah,</p>
-                    <p>tapi kamu selalu menang</p>
-                    <p>kok di hati aku, HEHE</p>
-                    <p>^_^</p>
+                    <p>Gapapa kalah,</p>
+                    <p>yang penting udah berusaha</p>
+                    <p>TUTOR DEK AWOKWOK, HEHE</p>
+                    <p>Tetap semangat hehe</p>
                     <p class="love-text">I LOVE YOU &lt;3</p>
                 </div>
                 <button class="modal-btn" id="ok-btn">OK</button>
