--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <p>yang penting udah berusaha</p>
                     <p>TUTOR DEK AWOKWOK, HEHE</p>
                     <p>Tetap semangat hehe</p>
-                    <p class="love-text">I LOVE YOU &lt;3</p>
+                    <p class="love-text">PENDEK &lt;3</p>
                 </div>
                 <button class="modal-btn" id="ok-btn">OK</button>
             </div>
