--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
         <!-- Final Message Modal -->
         <div id="final-message-modal" class="modal">
             <div class="modal-content">
-                <div class="final-message-title">YAHAHAHHAHA KALAH</div>
+                <div class="final-message-title">YAHHHHHHHH KALAHHHH</div>
                 <div class="final-message-text">
                     <p>Gapapa kalah,</p>
-                    <p>yang penting udah berusaha</p>
-                    <p>TUTOR DEK AWOKWOK, HEHE</p>
+                    <p>yang penting udah kamu berusaha</p>
+                    <p>Kamu selalu menang kok dihatiku sampe sekarang:3</p>
                     <p>Tetap semangat hehe</p>
-                    <p class="love-text">PENDEK &lt;3</p>
+                    <p class="love-text">I LOVE YOU HONEY &lt;3</p>
                 </div>
                 <button class="modal-btn" id="ok-btn">OK</button>
             </div>
